set position on input to prevent shadow clipping

--- a/packages/core/src/components/forms/_input-group.scss
+++ b/packages/core/src/components/forms/_input-group.scss
@@ -69,6 +69,8 @@ $input-button-height-large: $pt-button-height !default;
   position: relative;
 
   .pt-input {
+    // explicit position prevents shadow clipping https://github.com/palantir/blueprint/pull/490#issuecomment-273342170
+    position: relative;
     width: 100%;
 
     // add space if there's something before or after the input
@@ -97,6 +99,8 @@ $input-button-height-large: $pt-button-height !default;
   .pt-icon {
     @include pt-icon($pt-icon-size-standard);
 
+    // bump icon up so it sits above input
+    z-index: 1;
     margin: 0 ($pt-input-height - $pt-icon-size-standard) / 2;
     line-height: $pt-input-height;
   }
